# X

./: .gitignore  XCreateProject.sh  readme.md
XBase/: build.sh
XBase/src/: XPublic的替身  main.cpp
XBase/src/XPublic/: CMakeLists.txt
XBase/src/XPublic/XFrames/XResourse/xml/: web.xml
XBase/src/XPublic/XGame/XDesignBase/: XFiniteStateMachine.cpp  XFiniteStateMachine.h
XBase/src/XPublic/XStruct/: XBaseStruct.h  XHttpStruct.h  XNetStruct.h  XUtilsStruct.cpp  XUtilsStruct.h
XBase/src/XPublic/XTCSnake/Classes/: AppDelegate 2.cpp  AppDelegate.cpp  StartScene.h
XBase/src/XPublic/XTCSnake/proj.ios_mac/XTCSnake.xcodeproj/: project.pbxproj
XBase/src/XPublic/XTCSnake/proj.ios_mac/XTCSnake.xcodeproj/project.xcworkspace/xcuserdata/willyoung.xcuserdatad/: UserInterfaceState.xcuserstate
XBase/src/XPublic/XTCSnake/proj.ios_mac/XTCSnake.xcodeproj/xcuserdata/willyoung.xcuserdatad/xcschemes/: xcschememanagement.plist
XBase/src/XPublic/XTools/XHTTP/: XHttp.cpp  XHttp.h
XBase/src/XPublic/XTools/XLog/: XLog.cpp
XBase/src/XPublic/XTools/XNet/: XBaseNet.cpp  XBaseNet.h
XBase/src/XPublic/XTools/XPthread/: XPthreadPool.h
XBase/src/XPublic/XTools/XServer/: XServerBase.cpp  XServerBase.h
XBase/src/XPublic/XTools/XSql/: XMysql.cpp  XMysql.h
XBase/src/XPublic/XTools/XUtils/: XBlockQueue.h  XFile.cpp  XFile.h  XLock.h  XMath.cpp  XMath.h  XScreenUtil.h  XScreenUtil.m  XString.cpp  XString.h  XTime.cpp  XTime.h  XUtils.cpp  XUtils.h  XWheelTimer.cpp  XWheelTimer.h
XBase/src/test/XServer/: XWebServer.cpp
XBase/third/Xml/: tinystr.h  tinyxml.cpp  tinyxmlparser.cpp
XChat/XChatServer/XXPhotoServer/: third
XChat/XChatServer/XXUserServer/src/: XPublic
XELSBlock/: CMakeLists.txt  third
XELSBlock/Classes/: AppDelegate.cpp
XELSBlock/Classes/XELSBlcok/: ELSHomeScene.cpp  ELSHomeScene.hpp  ELSInfoManager.cpp  ELSInfoManager.hpp
XELSBlock/proj.android/: settings.gradle
XELSBlock/proj.android/app/: AndroidManifest.xml  build.gradle
XELSBlock/proj.android/app/res/values/: strings.xml
XELSBlock/proj.ios_mac/XELSBlock.xcodeproj/: project.pbxproj
XELSBlock/proj.ios_mac/XELSBlock.xcodeproj/project.xcworkspace/xcuserdata/willyoung.xcuserdatad/: UserInterfaceState.xcuserstate
XELSBlock/proj.ios_mac/ios/: Info.plist
XELSBlock/proj.ios_mac/mac/: Info.plist
XELSBlock/proj.win32/: XELSBlock.sln
XMuduo/: CMakeLists.txt  include  lib  third
XMuduo/src/: CMakeLists.txt  XPublic  main.cpp
XMuduo/src/XMuduo/: CMakeLists.txt
XMuduo/src/XMuduo/chat/: CMakeLists.txt  codec.h
XMuduo/src/XMuduo/protobuf/codec/: client.cc  codec.cc  codec_test.cc  dispatcher_test.cc  query.proto
XTCSnake/: CMakeLists.txt  cocos2d
XTCSnake/Classes/: AppDelegate.cpp  StartScene.cpp  StartScene.h  XCOCOS2DX.hpp  XCOCOS2DX.mm  XPublic
XTCSnake/Classes/XTCSnake/: XTCSCommLayer.cpp  XTCSCommLayer.hpp  XTCSGameScene.cpp  XTCSGameScene.hpp  XTCSHomeScene.cpp  XTCSHomeScene.hpp  XTCSInfoManager.cpp  XTCSInfoManager.hpp  XTCSSoundManager.cpp  XTCSSoundManager.hpp
XTCSnake/Classes/XTCSnake/TCSStruct/: XTCSDataStruct.cpp  XTCSDataStruct.hpp  XTCSMap.cpp  XTCSMap.hpp  XTCSSnake.cpp  XTCSSnake.hpp
XTCSnake/Classes/third/: CMakeLists.txt
XTCSnake/Classes/third/Xml/: tinyxml.h
XTCSnake/Resources/res_tcs_v1/pub/: tcsColor0.xml  tcsUserData.json
XTCSnake/Resources/res_tcs_v1/zh/: tcsLanguage.xml
XTCSnake/cocos2d/cocos/audio/apple/: AudioEngine-inl.mm
XTCSnake/cocos2d/cocos/audio/include/: SimpleAudioEngine 2.h
XTCSnake/cocos2d/cocos/audio/ios/: SimpleAudioEngine.mm
XTCSnake/cocos2d/cocos/platform/android/libcocos2dx/build 2/.transforms/87cbf60561afb431b0426f43eab653de/transformed/classes/: classes.dex
XTCSnake/cocos2d/cocos/platform/android/libcocos2dx/build 2/intermediates/incremental/mergeDebugJniLibFolders/: merger.xml
XTCSnake/cocos2d/cocos/platform/android/libcocos2dx/build 2/intermediates/incremental/mergeDebugShaders/: merger.xml
XTCSnake/cocos2d/cocos/platform/android/libcocos2dx/build 2/intermediates/incremental/packageDebugAssets/: merger.xml
XTCSnake/cocos2d/cocos/platform/android/libcocos2dx/build 2/intermediates/incremental/packageDebugResources/: compile-file-map.properties
XTCSnake/cocos2d/cocos/platform/android/libcocos2dx/build 2/intermediates/manifest_merge_blame_file/debug/: manifest-merger-blame-debug-report.txt
XTCSnake/cocos2d/cocos/platform/android/libcocos2dx/build 2/outputs/logs/: manifest-merger-debug-report 2.txt  manifest-merger-debug-report 3.txt
XTCSnake/proj.android/: settings.gradle
XTCSnake/proj.android/app/: AndroidManifest.xml  build.gradle
XTCSnake/proj.android/app/jni/: Android.mk  Application.mk
XTCSnake/proj.android/app/res/values/: strings.xml
XTCSnake/proj.ios_mac/XTCSnake.xcodeproj/: project.pbxproj
XTCSnake/proj.ios_mac/XTCSnake.xcodeproj/project.xcworkspace/xcuserdata/willyoung.xcuserdatad/: UserInterfaceState.xcuserstate
XTCSnake/proj.ios_mac/XTCSnake.xcodeproj/xcshareddata/xcschemes/: XTCSnake.xcscheme
XTCSnake/proj.ios_mac/XTCSnake.xcodeproj/xcuserdata/willyoung.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
XTCSnake/proj.ios_mac/XTCSnake.xcodeproj/xcuserdata/willyoung.xcuserdatad/xcschemes/: xcschememanagement.plist
XTCSnake/proj.ios_mac/ios/: AppController.mm  Info.plist  RootViewController.h  RootViewController.mm
XTCSnake/proj.ios_mac/ios/Images.xcassets/AppIcon.appiconset/: Contents.json
XTCSnake/proj.ios_mac/ios/Images.xcassets/LaunchImage.launchimage/: Contents.json
XTCSnake/proj.ios_mac/mac/: Info.plist
XTCSnake/proj.win32/: XTCSnake.sln
XUser/: CMakeLists.txt  include  lib  readme.md  run.sh  third
XUser/src/: CMakeLists.txt  XPublic  main.cpp
XUser/src/XUserSrc/: CMakeLists.txt  XUserDataStruct.cpp  XUserDataStruct.h
XWeb/: CMakeLists.txt  build.sh  include  lib  run.sh  third
XWeb/src/: CMakeLists.txt  XPublic  main.cpp
XWeb/src/test/: CMakeLists.txt
XWeb/src/test/XEchoServer/: Echo.cpp  Echo.h
XWeb/src/test/XServer/: XWebServer.cpp
XWeb/src/test/XUserServlet/: XBlogServlet.cpp  XBlogServlet.h  XTestServlet.cpp
(+2 files in other folders)
